--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -29,7 +29,11 @@
         <td><h6 th:text="${user.getName()}"/></td>
         <td><h6 th:text="${user.getSurName()}"/></td>
         <td><h6 th:text="${user.getUsername()}"/></td>
-        <td><h6 th:text="${user.getAuthorities()}"/></td>
+        <td>
+              <span th:each="role : ${user.getRoles()}"
+                    th:text="${role.getRole().replace('ROLE_', '') + ' '}">
+                </span>
+        </td>
         <td><h6 th:text="${user.getAge()}"/></td>
         <td><h6 th:text="${user.getEmail()}"/></td>
 
