--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -35,7 +35,7 @@
 
             <label>
                 <input type="checkbox" name="roles"
-                       th:text="${role.getRole()}"
+                       th:text="${role.getRole().replace('ROLE_', '') + ' '}"
                        th:value="${role.getId()}"
                        th:field="*{roles}"/>
             </label>
