--- a/src/main/resources/templates/newUser.html
+++ b/src/main/resources/templates/newUser.html
@@ -32,12 +32,11 @@
 
             <label>
                 <input type="checkbox" name="roles"
-                       th:text="${role.getRole()}"
+                       th:text="${role.getRole().replace('ROLE_', '') + ' '}"
                        th:value="${role.getId()}"
                        th:field="*{roles}"/>
             </label>
         </div>
-
     </div>
     <br>
     <br>
