Все исправления внесены

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -9,7 +9,7 @@
 <body>
 
 <h3>Администратор:
-    <td th:text="${ user.getName()}"/>
+    <td th:text="${ userName }"/>
     <a class="btn btn-outline-primary" href="/logout" role="button">ВЫХОД</a>
 </h3>
 <table class="table table-striped">
